tdf#148087 assert editing a cell with OnSelectionChange macro breakpoint

assert was introduced in
    commit e1972743d692c8d8611912c31aae2cb08ae7636d
    Author: Noel Grandin <noelgrandin@gmail.com>
    Date:   Sun Sep 5 15:01:44 2021 +0200
    be more disciplined with SetUpdateLayout on editengine

We want to restore UpdateLayout when we're done doing layout, we should
not just leave it FALSE

Change-Id: Ic0431ffc3c66d0d02bfd10c323b18383f52dbc95