compilerplugins/clang/unusedfields.cxx
@@ -1226,7 +1226,7 @@ llvm::Optional<CalleeWrapper> UnusedFields::getCallee(CallExpr const * callExpr)
     return llvm::Optional<CalleeWrapper>();
 }
 
-loplugin::Plugin::Registration< UnusedFields > X("unusedfields", false);
+loplugin::Plugin::Registration< UnusedFields > X("unusedfields", true);
 
 }
 
