sc/source/ui/app/inputhdl.cxx
@@ -3094,6 +3094,8 @@ void ScInputHandler::EnterHandler( ScEnterMode nBlockMode )
     }
 
     std::vector<editeng::MisspellRanges> aMisspellRanges;
+    // UpdateLayout must be true during CompleteOnlineSpelling
+    const bool bUpdateLayout = mpEditEngine->SetUpdateLayout( true );
     mpEditEngine->CompleteOnlineSpelling();
     bool bSpellErrors = !bFormulaMode && mpEditEngine->HasOnlineSpellErrors();
     if ( bSpellErrors )
@@ -3360,6 +3362,8 @@ void ScInputHandler::EnterHandler( ScEnterMode nBlockMode )
 
     bInOwnChange = false;
     bInEnterHandler = false;
+    if (bUpdateLayout)
+        mpEditEngine->SetUpdateLayout( true );
 }
 
 void ScInputHandler::CancelHandler()
